Open tool view package for testing